--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
   <div class="container">
     <h1>Ferro Pet</h1>
-    <img id="petImage" src="https://i.imgur.com/OYQMa7N.png" alt="Ferro Pet" />
+    <img id="petImage" src="assets/Ferro.png" alt="Ferro Pet" />
     <div class="stats">
       <p>Happiness: <span id="happiness">100</span></p>
       <p>Hunger: <span id="hunger">0</span></p>
