--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       margin-top: 0;
     }
     img {
-      width: 150px;
-      height: 150px;
+      max-width: 100%;
+      height: auto;
       margin-bottom: 10px;
     }
     .stats {
