--- a/index.html
+++ b/index.html
@@ -24,14 +24,23 @@
       padding: 20px;
       width: 90%;
       max-width: 400px;
+      position: relative;
     }
     h1 {
       margin-top: 0;
     }
-    img {
-      max-width: 100%;
+    #petImage {
+      width: 25%;
       height: auto;
       margin-bottom: 10px;
+    }
+    #foodBowl {
+      width: 18%;
+      height: auto;
+      position: absolute;
+      right: 20%;
+      top: 30%;
+      display: none;
     }
     .stats {
       font-size: 16px;
@@ -55,7 +64,8 @@
 <body>
   <div class="container">
     <h1>Ferro Pet</h1>
-    <img id="petImage" src="https://abblake89.github.io/ferro-pets/assets/Ferro.png" alt="Ferro Pet" style="width: 25%; height: auto;" />
+    <img id="petImage" src="https://abblake89.github.io/ferro-pets/assets/Ferro.png" alt="Ferro Pet" />
+    <img id="foodBowl" src="https://abblake89.github.io/ferro-pets/assets/FoodBowl.png" alt="Food Bowl" />
     <div class="stats">
       <p>Happiness: <span id="happiness">100</span></p>
       <p>Hunger: <span id="hunger">0</span></p>
@@ -67,10 +77,12 @@
   <script>
     let happiness = localStorage.getItem('happiness') || 100;
     let hunger = localStorage.getItem('hunger') || 0;
+    let isFeeding = false;
 
     const happinessEl = document.getElementById('happiness');
     const hungerEl = document.getElementById('hunger');
     const petImage = document.getElementById('petImage');
+    const foodBowl = document.getElementById('foodBowl');
 
     function updateStats() {
       happinessEl.textContent = happiness;
@@ -80,9 +92,42 @@
     }
 
     function feedPet() {
+      if (isFeeding) return;
+      isFeeding = true;
+
       hunger = Math.max(0, hunger - 20);
       happiness = Math.min(100, parseInt(happiness) + 10);
       updateStats();
+
+      petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_right.png';
+      setTimeout(() => {
+        petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
+      }, 4000);
+
+      // Fully end feeding after 7 seconds
+      window.setTimeout(() => {
+        isFeeding = false;
+      }, 7000);
+
+      animateFoodBowl();
+    }
+
+    function animateFoodBowl() {
+      setTimeout(() => {
+        foodBowl.style.display = 'inline';
+        foodBowl.style.transition = 'right 1s ease';
+        foodBowl.style.right = '-50%';
+
+        requestAnimationFrame(() => {
+          setTimeout(() => {
+            foodBowl.style.right = '20%';
+          }, 50);
+        });
+
+        setTimeout(() => {
+          foodBowl.style.display = 'none';
+        }, 4000);
+      }, 3000);
     }
 
     function petPet() {
@@ -105,7 +150,7 @@
 
     function moveLeft() {
       petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_left.png';
-      const duration = Math.random() * 2000 + 1000; // 1s to 3s
+      const duration = Math.random() * 2000 + 1000;
       setTimeout(() => {
         petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
       }, duration);
@@ -113,20 +158,20 @@
 
     function moveRight() {
       petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_right.png';
-      const duration = Math.random() * 2000 + 1000; // 1s to 3s
+      const duration = Math.random() * 2000 + 1000;
       setTimeout(() => {
         petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
       }, duration);
     }
 
-    // Perform random behavior every 3 seconds
     setInterval(() => {
+      if (isFeeding) return;
       const chance = Math.random();
       if (chance < 0.4) {
         blink();
       } else if (chance < 0.6) {
         blink();
-        setTimeout(() => blink(), 500); // Double blink
+        setTimeout(() => blink(), 500);
       } else if (chance < 0.8) {
         moveLeft();
       } else {
@@ -134,7 +179,7 @@
       }
     }, 3000);
 
-    setInterval(decayStats, 5000); // Every 5 seconds
+    setInterval(decayStats, 5000);
     updateStats();
   </script>
 </body>
