--- a/index.html
+++ b/index.html
@@ -16,24 +16,39 @@
       justify-content: center;
       height: 100vh;
     }
+
     .container {
       text-align: center;
-      background: white;
+      background: url('https://abblake89.github.io/ferro-pets/assets/Background.jpg') no-repeat center 90%;
+      background-size: auto 160%;
+      background-position-x: 50%;
+      transition: background-position-x 0.5s ease;
       border-radius: 20px;
       box-shadow: 0 0 20px rgba(0,0,0,0.1);
-      padding: 20px;
       width: 90%;
       max-width: 400px;
+      aspect-ratio: 1 / 1;
       position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      padding: 0 20px 0 20px;
+      
     }
+
     h1 {
       margin-top: 0;
     }
+
     #petImage {
       width: 25%;
       height: auto;
-      margin-bottom: 10px;
+      position: absolute;
+      bottom: 70px;
+      cursor: pointer;
     }
+
     #foodBowl {
       width: 18%;
       height: auto;
@@ -42,10 +57,18 @@
       top: 30%;
       display: none;
     }
+
     .stats {
       font-size: 16px;
       margin: 10px 0;
+      text-align: center;
     }
+
+    .buttons {
+      margin-top: 15px;
+      text-align: center;
+    }
+
     button {
       margin: 5px;
       padding: 10px 20px;
@@ -56,8 +79,16 @@
       color: white;
       cursor: pointer;
     }
+
     button:hover {
       background: #ff9137;
+    }
+
+    @media (max-width: 400px) {
+      button {
+        font-size: 14px;
+        padding: 8px 16px;
+      }
     }
   </style>
 </head>
@@ -66,30 +97,31 @@
     <h1>Ferro Pet</h1>
     <img id="petImage" src="https://abblake89.github.io/ferro-pets/assets/Ferro.png" alt="Ferro Pet" />
     <img id="foodBowl" src="https://abblake89.github.io/ferro-pets/assets/FoodBowl.png" alt="Food Bowl" />
-    <div class="stats">
-      <p>Happiness: <span id="happiness">100</span></p>
-      <p>Hunger: <span id="hunger">0</span></p>
-    </div>
-    <button onclick="feedPet()">🍕 Feed</button>
-    <button onclick="petPet()">💖 Pet</button>
-    <button onclick="shakeFerro()">🔄 Shake</button>
-    <button onclick="startNFCScan()">📶 Start NFC Scan</button>
-
+  </div>
+  <div class="stats">
+    <p>Happiness: <span id="happiness">100</span></p>
+    <p>Hunger: <span id="hunger">0</span></p>
+  </div>
+  <div class="buttons">
+    <button onclick="feedPet()" aria-label="Feed Ferro">🍕 Feed</button>
+    <button onclick="petPet()" aria-label="Pet Ferro">💖 Pet</button>
+    <button onclick="shakeFerro()" aria-label="Shake Ferro">🔄 Shake</button>
+    <button onclick="startNFCScan()" aria-label="Start NFC Scan">📶 Start NFC Scan</button>
   </div>
 
   <script>
-    let happiness = localStorage.getItem('happiness') || 100;
-    let hunger = localStorage.getItem('hunger') || 0;
-    let isFeeding = false;
-    let isShaking = false;
-    let resetFerroImageTimeout;
-
+    const petImage = document.getElementById('petImage');
+    const container = document.querySelector('.container');
+    const foodBowl = document.getElementById('foodBowl');
     const happinessEl = document.getElementById('happiness');
     const hungerEl = document.getElementById('hunger');
-    const petImage = document.getElementById('petImage');
-    const foodBowl = document.getElementById('foodBowl');
+
+    let happiness = parseInt(localStorage.getItem('happiness')) || 100;
+    let hunger = parseInt(localStorage.getItem('hunger')) || 0;
 
     function updateStats() {
+      happiness = Math.min(100, Math.max(0, parseInt(happiness)));
+      hunger = Math.min(100, Math.max(0, parseInt(hunger)));
       happinessEl.textContent = happiness;
       hungerEl.textContent = hunger;
       localStorage.setItem('happiness', happiness);
@@ -97,73 +129,94 @@
     }
 
     function feedPet() {
-      if (isFeeding || isShaking) return;
-      isFeeding = true;
-
       hunger = Math.max(0, hunger - 20);
-      happiness = Math.min(100, parseInt(happiness) + 10);
+      happiness = Math.min(100, happiness + 10);
       updateStats();
-
       petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_right.png';
-      clearTimeout(resetFerroImageTimeout);
-      resetFerroImageTimeout = setTimeout(() => {
-        const eatFrames = [
-          'https://abblake89.github.io/ferro-pets/assets/Ferro_Eat_Open.png',
-          'https://abblake89.github.io/ferro-pets/assets/Ferro_Eat_Closed.png',
-          'https://abblake89.github.io/ferro-pets/assets/Ferro_Eat_Open.png',
-          'https://abblake89.github.io/ferro-pets/assets/Ferro_Eat_Closed.png',
-          'https://abblake89.github.io/ferro-pets/assets/Ferro_Eat_Open.png',
-          'https://abblake89.github.io/ferro-pets/assets/Ferro_Eat_Closed.png'
-        ];
-
-        eatFrames.forEach((frame, i) => {
-          setTimeout(() => {
-            petImage.src = frame;
-          }, i * 500);
-        });
-
-        setTimeout(() => {
-          petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_Happy.png';
-          setTimeout(() => {
-            petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
-          }, 2500);
-        }, eatFrames.length * 500);
-      }, 2000);
-
-      window.setTimeout(() => {
-        isFeeding = false;
-      }, 7000);
-
-      animateFoodBowl();
-    }
-
-    function animateFoodBowl() {
       setTimeout(() => {
         foodBowl.style.display = 'inline';
-        foodBowl.style.transition = 'right 1s ease';
-        foodBowl.style.right = '-50%';
-
-        requestAnimationFrame(() => {
-          setTimeout(() => {
-            foodBowl.style.right = '20%';
-          }, 50);
-        });
-
         setTimeout(() => {
-          foodBowl.style.display = 'none';
-        }, 4000);
-      }, 1000);
+          foodBowl.style.right = '-50%';
+          requestAnimationFrame(() => {
+            setTimeout(() => {
+              foodBowl.style.right = '20%';
+            }, 50);
+          });
+          setTimeout(() => {
+            foodBowl.style.display = 'none';
+          }, 4000);
+        }, 1000);
+      }, 200);
     }
 
     function petPet() {
-      happiness = Math.min(100, parseInt(happiness) + 5);
+      happiness = Math.min(100, happiness + 5);
       updateStats();
     }
 
-    function decayStats() {
-      hunger = Math.min(100, parseInt(hunger) + 1);
-      happiness = Math.max(0, parseInt(happiness) - 1);
-      updateStats();
+    function startNFCScan() {
+      if ('NDEFReader' in window) {
+        try {
+          const reader = new NDEFReader();
+          reader.scan().then(() => {
+            reader.onreading = event => {
+              const decoder = new TextDecoder();
+              for (const record of event.message.records) {
+                if (record.recordType === 'text') {
+                  const text = decoder.decode(record.data);
+                  if (text.trim() === 'ferro_food') {
+                    feedPet();
+                  }
+                }
+              }
+            };
+          });
+        } catch (error) {
+          alert("NFC scan failed: " + error);
+        }
+      } else {
+        alert("Web NFC is not supported in this browser.");
+      }
+    }
+
+    function moveLeft() {
+      petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_left.png';
+      container.style.backgroundPositionX = '40%';
+      const duration = Math.random() * 2000 + 1000;
+      setTimeout(() => {
+        petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
+        container.style.backgroundPositionX = '50%';
+      }, duration);
+    }
+
+    function moveRight() {
+      petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_right.png';
+      container.style.backgroundPositionX = '60%';
+      const duration = Math.random() * 2000 + 1000;
+      setTimeout(() => {
+        petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
+        container.style.backgroundPositionX = '50%';
+      }, duration);
+    }
+
+    function shakeFerro() {
+      const frames = [
+        'https://abblake89.github.io/ferro-pets/assets/Ferro_left.png',
+        'https://abblake89.github.io/ferro-pets/assets/Ferro_right.png',
+        'https://abblake89.github.io/ferro-pets/assets/Ferro_left.png',
+        'https://abblake89.github.io/ferro-pets/assets/Ferro_right.png',
+        'https://abblake89.github.io/ferro-pets/assets/Ferro_left.png',
+        'https://abblake89.github.io/ferro-pets/assets/Ferro_right.png'
+      ];
+      frames.forEach((frame, i) => {
+        setTimeout(() => {
+          petImage.src = frame;
+        }, i * 120);
+      });
+      setTimeout(() => {
+        petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
+        container.style.backgroundPositionX = '50%';
+      }, frames.length * 120);
     }
 
     function blink() {
@@ -173,111 +226,25 @@
       }, 300);
     }
 
-    function moveLeft() {
-      petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_left.png';
-      const duration = Math.random() * 2000 + 1000;
-      setTimeout(() => {
-        petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
-      }, duration);
-    }
-
-    function moveRight() {
-      petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_right.png';
-      const duration = Math.random() * 2000 + 1000;
-      setTimeout(() => {
-        petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
-      }, duration);
-    }
-
-    setInterval(() => {
-      if (isFeeding || isShaking) return;
-      const chance = Math.random();
-      if (chance < 0.4) {
-        blink();
-      } else if (chance < 0.6) {
-        blink();
-        setTimeout(() => blink(), 500);
-      } else if (chance < 0.8) {
-        moveLeft();
-      } else {
-        moveRight();
-      }
-    }, 3000);
-
-    setInterval(decayStats, 5000);
-
-    function shakeFerro() {
-      if (isFeeding || isShaking) return;
-      isShaking = true;
-
-      const frames = [
-        'https://abblake89.github.io/ferro-pets/assets/Ferro_left.png',
-        'https://abblake89.github.io/ferro-pets/assets/Ferro_right.png',
-        'https://abblake89.github.io/ferro-pets/assets/Ferro_left.png',
-        'https://abblake89.github.io/ferro-pets/assets/Ferro_right.png',
-        'https://abblake89.github.io/ferro-pets/assets/Ferro_left.png',
-        'https://abblake89.github.io/ferro-pets/assets/Ferro_right.png'
-      ];
-
-      frames.forEach((frame, i) => {
-        setTimeout(() => {
-          petImage.src = frame;
-        }, i * 120);
-      });
-
-      setTimeout(() => {
-        petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
-        isShaking = false;
-      }, frames.length * 120);
+    function decayStats() {
+      hunger = Math.min(100, hunger + 1);
+      happiness = Math.max(0, happiness - 1);
+      updateStats();
     }
 
     petImage.addEventListener('click', () => {
-      if (isFeeding || isShaking) return;
-      petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_Happy.png';
-      isShaking = true;
-      setTimeout(() => {
-        petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
-        isShaking = false;
-        shakeFerro();
-      }, 3000);
+      petPet();
+      shakeFerro();
     });
 
+    setInterval(() => {
+      const chance = Math.random();
+      if (chance < 0.4) blink();
+      else if (chance < 0.7) moveLeft();
+      else moveRight();
+    }, 4000);
 
-
-    async function startNFCScan() {
-  if ('NDEFReader' in window) {
-    try {
-      const reader = new NDEFReader();
-      await reader.scan();
-
-      reader.onreading = event => {
-        const decoder = new TextDecoder();
-        for (const record of event.message.records) {
-          if (record.recordType === 'text') {
-            const text = decoder.decode(record.data);
-            console.log('📲 NFC tag read:', text);
-
-            if (text.trim() === 'ferro_food') {
-              console.log('🍕 ferro_food tag detected — feeding pet!');
-              feedPet();
-            }
-          }
-        }
-      };
-
-      console.log("✅ NFC scan started. Tap a tag!");
-    } catch (error) {
-      console.error("❌ NFC scan failed:", error);
-    }
-  } else {
-    alert("Web NFC is not supported in this browser.");
-  }
-}
-
-
-
-
-    
+    setInterval(decayStats, 5000);
 
     updateStats();
   </script>
