--- a/index.html
+++ b/index.html
@@ -36,15 +36,11 @@
       padding: 0 20px;
     }
 
-    h1 {
-      margin-top: 0;
-    }
-
     #petImage {
       width: 25%;
       height: auto;
       position: absolute;
-      bottom: 80px; /* moved down another 20px from 100px */
+      bottom: 80px;
       cursor: pointer;
     }
 
@@ -94,7 +90,6 @@
 </head>
 <body>
   <div class="container">
-    <h1>Ferro Pet</h1>
     <img id="petImage" src="https://abblake89.github.io/ferro-pets/assets/Ferro.png" alt="Ferro, your magnetic pet" role="button" tabindex="0" />
     <img id="foodBowl" src="https://abblake89.github.io/ferro-pets/assets/FoodBowl.png" alt="Food Bowl" />
   </div>
@@ -104,7 +99,6 @@
   </div>
   <div class="buttons">
     <button onclick="feedPet()" aria-label="Feed Ferro">🍕 Feed</button>
-    <button onclick="petPet()" aria-label="Pet Ferro">💖 Pet</button>
     <button onclick="shakeFerro()" aria-label="Shake Ferro">🔄 Shake</button>
     <button onclick="startNFCScan()" aria-label="Start NFC Scan">📶 Start NFC Scan</button>
     <button onclick="moveLeft()" aria-label="Move Left">⬅️ Left</button>
@@ -169,12 +163,6 @@
       }, 800);
     }
 
-    function petPet() {
-      if (isBusy) return;
-      happiness = Math.min(100, happiness + 5);
-      updateStats();
-    }
-
     function startNFCScan() {
       if (isBusy) return;
       if ('NDEFReader' in window) {
@@ -203,24 +191,26 @@
 
     function moveLeft() {
       if (isBusy) return;
+      isBusy = true;
       petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_left.png';
       backgroundX = Math.max(0, backgroundX - 15);
       container.style.backgroundPositionX = backgroundX + '%';
-      const duration = Math.random() * 2000 + 1000;
       setTimeout(() => {
         petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
-      }, duration);
+        isBusy = false;
+      }, 1000);
     }
 
     function moveRight() {
       if (isBusy) return;
+      isBusy = true;
       petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_right.png';
       backgroundX = Math.min(100, backgroundX + 15);
       container.style.backgroundPositionX = backgroundX + '%';
-      const duration = Math.random() * 2000 + 1000;
       setTimeout(() => {
         petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
-      }, duration);
+        isBusy = false;
+      }, 1000);
     }
 
     function shakeFerro() {
@@ -257,18 +247,6 @@
       updateStats();
     }
 
-    petImage.addEventListener('click', () => {
-      petPet();
-      shakeFerro();
-    });
-
-    petImage.addEventListener('keypress', e => {
-      if (e.key === 'Enter' || e.key === ' ') {
-        petPet();
-        shakeFerro();
-      }
-    });
-
     setInterval(() => {
       if (isBusy) return;
       const chance = Math.random();
@@ -278,6 +256,12 @@
     }, 4000);
 
     setInterval(decayStats, 5000);
+
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'ArrowLeft') moveLeft();
+      if (e.key === 'ArrowRight') moveRight();
+    });
+
     updateStats();
   </script>
 </body>
